Updates on basic stuff and really setting up everything

--- a/fundamenty.site.yml
+++ b/fundamenty.site.yml
@@ -1,5 +1,5 @@
 # Once you complete modifying this file, run
-# $ yarn fundamenty:tool init
+# $ npm i yarn-tool
 name: Carajo
 repoUrl: https://github.com/jdcampolargo/carajo
 rootUrl: https://fundamenty.netlify.app
