--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@babel/preset-react": "^7.14.5",
         "babel-loader": "^8.2.2",
         "dotenv": "^10.0.0",
-        "swagger-ui-react": "^3.52.0"
+        "swagger-ui-react": "^3.52.0",
+        "yarn-tool": "^1.2.62"
     }
 }
